# DailyAssist

./: .flake8  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
daily-assist/: .dockerignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
daily-assist/reminders/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  app.py  pyproject.toml  response.json  test-event.json
daily-assist/reminders/.chalice/: config.json
daily-assist/reminders/core/: __init__.py  data_structures.py  lambda_handlers.py  reminder_frequency.py  utils.py
daily-assist/reminders/core/backend/dynamodb/: dynamo_backend.py  models.py
daily-assist/reminders/frontend/: .env  .env.example  index.html  package-lock.json  package.json
daily-assist/reminders/frontend/src/: App.css  App.tsx  amplify-config.ts  index.css  main.tsx  vite-env.d.ts
daily-assist/reminders/frontend/src/components/: AddReminderForm.tsx  EditReminderForm.tsx  RemindersList.tsx
daily-assist/reminders/frontend/src/utils/: auth.ts  date.ts
daily-assist/reminders/scripts/: README.md  table_create_update.py
daily-assist/reminders/terraform/bootstrap/: main.tf  outputs.tf  variables.tf
daily-assist/reminders/terraform/frontend/: main.tf  outputs.tf  variables.tf
daily-assist/reminders/terraform/lambda/: backend.tf  main.tf  outputs.tf  variables.tf
daily-assist/reminders/terraform/local/: main.tf
daily-assist/reminders/terraform/scheduled/: backend.tf  main.tf  outputs.tf  variables.tf
daily-assist/reminders/tests/: conftest.py  docker-compose.yml  test_requirements.txt
daily-assist/reminders/tests/app/: test_app.py
daily-assist/reminders/tests/backend/: test_dynamo_backend.py
daily-assist/reminders/tests/lambda_handlers/: test_lambda_handlers.py
daily-assist/reminders/tests/unit/: test_datastructures.py
reminders/: .gitignore  BUG_REPORT_UPDATE_REMINDER.md  CLAUDE.md  __init__.py  app.py  pyproject.toml  requirements.txt  table_create_update.py
reminders/.chalice/: config.json
reminders/chalicelib/: data_structures.py  datetime_utils.py  lambda_handlers.py  reminder_frequency.py  utils.py
reminders/chalicelib/backend/: __init__.py  dummy_backend.py
reminders/chalicelib/backend/dynamodb/: __init__.py  dynamo_backend.py  models.py
reminders/tests/: conftest.py  test_requirements.txt
reminders/tests/app/: test_app.py
reminders/tests/backend/: docker-compose.yml  test_dynamo_backend.py
reminders/tests/lambda_handlers/: test_lambda_handlers.py
reminders/tests/unit/: test_datastructures.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
shopping/: app.py  pyproject.toml
shopping/.chalice/: config.json
shopping/chalicelib/backend/: __init__.py
shopping/chalicelib/backend/postgres/: __init__.py
terraform/: .gitignore
