[tool.poetry]
name = "dailyassist"
version = "0.1.0"
description = "Simple daily assistance application"
authors = ["Subhayan Bhattacharya <subhayan.aws@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
