[tool.poetry]
name = "dailyassist"
version = "0.1.0"
description = "Simple daily assistance application"
authors = ["Subhayan Bhattacharya <subhayan.aws@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^5.2.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
chalice = "^1.26.6"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
