[project]
name = "daily-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.19",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mangum>=0.20.0",
    "pydantic>=2.12.5",
    "pynamodb>=6.1.0",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.13.3",
]
